<resources>
    <string name="app_name">TipCalculator</string>
    <string name="tip_percent">Tip Percent</string>
    <string name="percent">15%</string>
    <string name="tip_total">Tip Total</string>
    <string name="tipAmount">$0.00</string>
    <string name="total">Total</string>
    <string name="totalAmount">$0.00</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="bill_amount">Bill Amount</string>
</resources>
